Fixed layout issues

--- a/styles/carusela/desktop.carusela.css
+++ b/styles/carusela/desktop.carusela.css
@@ -1,5 +1,5 @@
 .carousel {
-    margin: 0 15.15rem;
+    margin: 0 27rem;
     min-width: 996px;
 }
 
@@ -16,6 +16,7 @@
     display: grid;
     grid-template-columns: 40px repeat(7, 160px) 40px;
     gap: 2rem;
+    width: 100%;
 }
 
 .arrow {
